refactor TAs()